--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   mongodb:
     image: aashreys/mongo-auth:latest
+    hostname: "mongodb"
     restart: always
     ports:
       - 42017:27017
@@ -17,28 +18,16 @@ services:
     volumes:
       - mongo-data:/data/db
 
-  zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8
-    ports:
-      - 42181:2181
+  rabbit:
+    image: "rabbitmq:3.10-management"
+    hostname: "rabbit"
     environment:
-      ALLOW_ANONYMOUS_LOGIN: yes
-    volumes:
-      - zookeeper-data:/bitnami
-
-  kafka:
-    image: docker.io/bitnami/kafka:3.2
+      RABBITMQ_DEFAULT_USER: "popug"
+      RABBITMQ_DEFAULT_PASS: "yEjGKPpfFLza8Zk3"
+      RABBITMQ_DEFAULT_VHOST: "/"
     ports:
-      - 42092:9092
-    environment:
-      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
-      ALLOW_PLAINTEXT_LISTENER: yes
-    depends_on:
-      - zookeeper
-    volumes:
-      - kafka-data:/bitnami
+      - 42672:5672
+      - 42673:15672
 
 volumes:
   mongo-data:
-  kafka-data:
-  zookeeper-data:
